--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<p>Hello, world!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test Blog</title>
+  </head>
+  <body>
+    <!-- navigation -->
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/cv">CV</a></li>
+        <li><a href="/blog">Blog</a></li>
+      </ul>
+    </nav>
+
+    <!-- content -->
+    <div class="container">
+      <div class="blurb">
+        <h1>Hi, this is a test blog site!</h1>
+        <p>This is a test of Jekyll. Is it a good blog platform?</p>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <footer>
+      <ul>
+        <li><a href="https://github.com/sinclairtarget">github.com/sinclairtarget</a></li>
+      </ul>
+    </footer>
+  </body>
+</html>
