Add stylesheet link.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Test Blog</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
   <body>
     <!-- navigation -->
