Add bunch of stuff.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Blog</title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </head>
-  <body>
-    <!-- navigation -->
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-      </ul>
-    </nav>
-
-    <!-- content -->
-    <div class="container">
-      <div class="blurb">
-        <h1>Hi, this is a test blog site!</h1>
-        <p>This is a test of Jekyll. Is it a good blog platform?</p>
-      </div>
-    </div>
-
-    <!-- footer -->
-    <footer>
-      <ul>
-        <li><a href="https://github.com/sinclairtarget">github.com/sinclairtarget</a></li>
-      </ul>
-    </footer>
-  </body>
-</html>
+---
+layout: default
+title: Test Blog
+---
+<div class="blurb">
+  <h1>Hi, this is a test blog!</h1>
+  <p>This is a test of Jekyll, a static site generator. It's pretty neat!</p>
+  <p>This page shares a footer and header with the other pages on this site.</p>
+</div>
