--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Test Blog
+title: Two-Bit History
 ---
 <div class="blurb">
-  <h1>Hi, this is a test blog!</h1>
+  <h1><code>10</code> | Hi, this is a test blog!</h1>
   <p>This is a test of Jekyll, a static site generator. It's pretty neat!</p>
   <p>This page shares a footer and header with the other pages on this site.</p>
 </div>
