Add tag to contact email.

--- a/about.html
+++ b/about.html
@@ -14,5 +14,5 @@ who designs and builds software everyday, questions like
 <a href="https://github.com/sinclairtarget">GitHub</a> and
 <a href="https://www.linkedin.com/in/sinclairtarget/">LinkedIn</a>. You can
 also
-<a href="mailto:sinclairtarget@gmail.com?subject=Two-Bit%20History">email me</a>.
+<a href="mailto:sinclairtarget%2Btwobithistory@gmail.com?subject=Two-Bit%20History">email me</a>.
 </p>
