Publish sem web post.

--- a/timeline.html
+++ b/timeline.html
@@ -44,4 +44,9 @@ title: Two-Bit History
       The Rise and Rise of JSON
     </a>
   </li>
+  <li>
+    <a href="{% link _posts/2018-05-27-semantic-web.md %}">
+      Whatever Happened to the Semantic Web?
+    </a>
+  </li>
 </ul>
