--- a/about.html
+++ b/about.html
@@ -3,13 +3,15 @@ layout: default
 title: Two-Bit History
 ---
 <h1>About</h1>
-<p>This is a blog about computer history intended for software developers.
-There's lots of writing out there about the history of computing for a general
-audience, but there is less for a technical audience. My hope is that this blog
-can answer interesting historical questions that might only occur to somebody
-who designs and builds software every day, questions like
+<p>This is a blog about computer history intended primarily for computer
+people. While there is a lot of writing out there about the history of
+computing for a general audience, there is much less for a technical
+audience—which I think is a shame, because there are so many interesting
+historical questions that might only occur to somebody who designs and builds
+software every day, questions like
 <a href="{{site.baseurl}}{% link _posts/2017-09-21-the-rise-and-rise-of-json.md %}">Where did JSON come from?</a> and
 <a href="{{site.baseurl}}{% link _posts/2017-09-28-the-lineage-of-man.md %}">Why are man pages still a thing?</a></p>
+
 <p>My name is Sinclair Target. You can find me on
 <a href="https://github.com/sinclairtarget">GitHub</a> and
 <a href="https://www.linkedin.com/in/sinclairtarget/">LinkedIn</a>. You can
