Finish birth of the web post.

--- a/timeline.html
+++ b/timeline.html
@@ -29,6 +29,14 @@ title: Two-Bit History
     </a>
   </li>
 </ul>
+<h2>1980s</h2>
+<ul>
+  <li>
+    <a href="{% link _posts/2018-06-10-birth-of-the-web.md %}">
+      The World Wide Web and Its Inventor
+    </a>
+  </li>
+</ul>
 <h2>1990s</h2>
 <ul>
   <li>
