Add personal website link to about page.

--- a/about.html
+++ b/about.html
@@ -12,9 +12,8 @@ software every day, questions like
 <a href="{{site.url}}{% link _posts/2017-09-21-the-rise-and-rise-of-json.md %}">Where did JSON come from?</a> and
 <a href="{{site.url}}{% link _posts/2017-09-28-the-lineage-of-man.md %}">Why are man pages still a thing?</a></p>
 
-<p>My name is Sinclair Target. You can find me on
-<a href="https://github.com/sinclairtarget">GitHub</a> and
-<a href="https://www.linkedin.com/in/sinclairtarget/">LinkedIn</a>. You can
-also
+<p>My name is Sinclair Target. You can find more information about me
+<a href="http://sinclairtarget.com">here</a>. If I've gotten something
+horrifically wrong, which is entirely possible, you can
 <a href="mailto:sinclairtarget%2Btwobithistory@gmail.com?subject=Two-Bit%20History">email me</a>.
 </p>
