Add card punch post to timeline.

--- a/timeline.html
+++ b/timeline.html
@@ -6,6 +6,11 @@ title: Two-Bit History
 <h2>1960s</h2>
 <ul>
   <li>
+    <a href="{% link _posts/2018-06-23-the-ibm-029-card-punch.md %}">
+      The IBM 029 Card Punch
+    </a>
+  </li>
+  <li>
     <a href="{% link _posts/2017-10-07-the-most-important-database.md %}">
       The Most Important Database You've Never Heard Of
     </a>
