--- a/timeline.html
+++ b/timeline.html
@@ -45,6 +45,11 @@ title: Two-Bit History
 <h2>1990s</h2>
 <ul>
   <li>
+    <a href="{% link _posts/2018-07-07-cvs.md %}">
+      Version Control Before Git with CVS
+    </a>
+  </li>
+  <li>
     <a href="{% link _posts/2017-11-19-the-ruby-story.md %}">
       The Ruby Story
     </a>
