Add dawn of the microcomputer post to timeline.

--- a/timeline.html
+++ b/timeline.html
@@ -33,6 +33,11 @@ title: Two-Bit History
       Simulating the Altair
     </a>
   </li>
+  <li>
+    <a href="{% link _posts/2018-07-22-dawn-of-the-microcomputer.md %}">
+      Dawn of the Microcomputer: The Altair 8800
+    </a>
+  </li>
 </ul>
 <h2>1980s</h2>
 <ul>
