URL encoding + in mailto address not required and may not be handled by some clients.

--- a/about.html
+++ b/about.html
@@ -15,5 +15,5 @@ software every day, questions like
 <p>My name is Sinclair Target. You can find more information about me
 <a href="http://sinclairtarget.com">here</a>. If I've gotten something
 horrifically wrong, which is entirely possible, you can
-<a href="mailto:sinclairtarget%2Btwobithistory@gmail.com?subject=Two-Bit%20History">email me</a>.
+<a href="mailto:sinclairtarget+twobithistory@gmail.com?subject=Two-Bit%20History">email me</a>.
 </p>
