--- a/timeline.html
+++ b/timeline.html
@@ -1,75 +1,31 @@
 ---
-layout: default
-title: Two-Bit History
 ---
+{% assign posts = site.posts | sort: 'year' %}
 <h1>Timeline</h1>
+
+<div class="timeline">
+{% assign sixties = posts | where_exp: 'item', 'item.year >= 1960'
+   | where_exp: 'item', 'item.year < 1970' %}
 <h2>1960s</h2>
-<ul>
-  <li>
-    <a href="{% link _posts/2018-06-23-ibm-029-card-punch.md %}">
-      The IBM 029 Card Punch
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2017-10-07-the-most-important-database.md %}">
-      The Most Important Database You've Never Heard Of
-    </a>
-  </li>
-</ul>
+{% include timeline-list.html posts=sixties %}
+
 <h2>1970s</h2>
-<ul>
-  <li>
-    <a href="{% link _posts/2017-12-29-codd-relational-model.md %}">
-      Important Papers: Codd and the Relational Model
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2017-09-28-the-lineage-of-man.md %}">
-      The Lineage of Man
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2017-12-02-simulating-the-altair.md %}">
-      Simulating the Altair
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2018-07-22-dawn-of-the-microcomputer.md %}">
-      Dawn of the Microcomputer: The Altair 8800
-    </a>
-  </li>
-</ul>
+{% assign seventies = posts | where_exp: 'item', 'item.year >= 1970'
+   | where_exp: 'item', 'item.year < 1980' %}
+{% include timeline-list.html posts=seventies %}
+
 <h2>1980s</h2>
-<ul>
-  <li>
-    <a href="{% link _posts/2018-06-10-birth-of-the-web.md %}">
-      The World Wide Web and Its Inventor
-    </a>
-  </li>
-</ul>
+{% assign eighties = posts | where_exp: 'item', 'item.year >= 1980'
+   | where_exp: 'item', 'item.year < 1990' %}
+{% include timeline-list.html posts=eighties %}
+
 <h2>1990s</h2>
-<ul>
-  <li>
-    <a href="{% link _posts/2018-07-07-cvs.md %}">
-      Version Control Before Git with CVS
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2017-11-19-the-ruby-story.md %}">
-      The Ruby Story
-    </a>
-  </li>
-</ul>
+{% assign nineties = posts | where_exp: 'item', 'item.year >= 1990'
+   | where_exp: 'item', 'item.year < 2000' %}
+{% include timeline-list.html posts=nineties %}
+
 <h2>2000s</h2>
-<ul>
-  <li>
-    <a href="{% link _posts/2017-09-21-the-rise-and-rise-of-json.md %}">
-      The Rise and Rise of JSON
-    </a>
-  </li>
-  <li>
-    <a href="{% link _posts/2018-05-27-semantic-web.md %}">
-      Whatever Happened to the Semantic Web?
-    </a>
-  </li>
-</ul>
+{% assign naughties = posts | where_exp: 'item', 'item.year >= 2000'
+   | where_exp: 'item', 'item.year < 2010' %}
+{% include timeline-list.html posts=naughties %}
+</div>
