Replace site.url where site.baseurl was meant.

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ computing for a general audience, there is much less for a technical
 audience—which I think is a shame, because there are so many interesting
 historical questions that might only occur to somebody who designs and builds
 software every day, questions like
-<a href="{{site.url}}{% link _posts/2017-09-21-the-rise-and-rise-of-json.md %}">Where did JSON come from?</a> and
-<a href="{{site.url}}{% link _posts/2017-09-28-the-lineage-of-man.md %}">Why are man pages still a thing?</a></p>
+<a href="{{site.baseurl}}{% link _posts/2017-09-21-the-rise-and-rise-of-json.md %}">Where did JSON come from?</a> and
+<a href="{{site.baseurl}}{% link _posts/2017-09-28-the-lineage-of-man.md %}">Why are man pages still a thing?</a></p>
 
 <p>My name is Sinclair Target. You can find more information about me
 <a href="http://sinclairtarget.com">here</a>. If I've gotten something
