Add og:description to main static pages of site.

--- a/timeline.html
+++ b/timeline.html
@@ -1,4 +1,5 @@
 ---
+description: A blog about the technical side of computing history.
 ---
 {% assign posts = site.posts | sort: 'year' %}
 <h1>Timeline</h1>
