--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 ---
+description: A blog about the technical side of computing history.
 ---
 <h1>About</h1>
 <p>This is a blog about computer history intended primarily for computer
